# msticpy

./: .bashrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.TXT  MANIFEST.in  MSTICPyExtensions.ipynb  NOTICE.txt  Pipfile  README.md  RELEASE_NOTES_2.17.2.md  RELEASE_NOTES_2.17.2_GITHUB.md  RELEASE_NOTES_README.md  UserExclusion.xml  __init__.py  azure-pipelines-1.yml  azure-pipelines.yml  mypy.ini  prospector.yml  pyproject.toml  pytest.ini  pytestlx  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test-graph.ipynb  test_cache.ipynb
.azurepipelines/: azure-pipelines-pr.yml  azure-pipelines-publish-pypi.yml  azure-pipelines-release.yml
.ci_config/: UserExclusion.xml  coverage.ini  credscan.json
.config/1espt/: PipelineAutobaseliningConfig.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  codeql.yml  codeql_updated.yml  docs.yml  python-package.yml  python-publish-test.yml  python-publish.yml  tweet.yml
.schemas/: queries.json
ci_config/: credscan.json
conda/: README.md  conda-reqs-dev-pip.txt  conda-reqs-dev.txt  conda-reqs-pip.txt  conda-reqs.txt
doc/: IoCExtract.ipynb  NotebookWidgets.ipynb  VirusTotalLookup.ipynb
doc/data/: ioc_df.csv
docs/: .readthedocs.yaml  Makefile  generate_query_docs.py  make.bat  requirements.txt
docs/diagrams/: MSTICPy Settings.pyns  QueryProvider.pyns  Secrets and Settings.pyns  TIProvider.pyns
docs/notebooks/: AWS_S3_HoneybucketLogAnalysis.ipynb  AnomalousSequence.ipynb  AzureBlobStorage.ipynb  AzureSentinelAPIs.ipynb  Azure_IPython_Workspace.ipynb  Base64Unpack.ipynb  ContiLeaksAnalysis.ipynb  Data.ipynb  DataObfuscation.ipynb  DataUploader.ipynb  DataViewer.ipynb  Data_Queries.ipynb  EntityGraph.ipynb  EventClustering.ipynb  EventTimeline.ipynb  FoliumMap.ipynb  GeoIPLookups.ipynb  IoCExtract.ipynb  Kusto-Analysis.ipynb  Kusto-Ingest.ipynb  LocalData-osquery.ipynb  LocalData-velociraptor.ipynb  MBLookup.ipynb  MDATPQuery.ipynb  MPSettingsEditor.ipynb  MSTICpy_Blackhat_Demo_2020.ipynb  MatrixPlot.ipynb  MicrosoftDefender.ipynb  MordorData.ipynb  Network Graph from DataFrame.ipynb  NotebookWidgets.ipynb  Openobserve-DataConnector.ipynb  Outliers-IsolationForest.ipynb  Outliers-IsolationForest_timeseries.ipynb  Outliers-RobustRandomCutForest.ipynb  Outliers-RobustRandomCutForest_timeseries.ipynb  PivotFunctions-Introduction.ipynb  PivotFunctions.ipynb  PollingDetection.ipynb  ProcessTree.ipynb  (+17 more)
docs/source/: CollectingLinuxAuditLogs.rst  DataAcquisition.rst  DataAnalysis.rst  DataEnrichment.rst  Development.rst  EventTimeline.rst  ExtendingMsticpy.rst  GettingStarted.rst  JupyterAndAzureSentinel.rst  JupyterAndSecurity.rst  ProcessTree.rst  Releases.rst  TIProviders.rst  Visualization.rst  api-how-to-read.rst  blog_articles.rst  conf.py  contributing.rst  index.rst  license.rst  msticpy.analysis.rst  msticpy.common.rst  msticpy.config.rst  msticpy.data.rst  msticpy.datamodel.rst  msticpy.nbtools.rst  msticpy.rst  msticpy.sectools.rst  msticpy.vis.rst  msticpyAPI.rst  notebooksamples.rst  otherdocs.rst  overview.rst  redirects
junit/: mypy-test-3.8-results.xml
msticpy/: __init__.py  _version.py  lazy_importer.py  msticpyconfig.yaml  mypy.ini
msticpy-docker-test/msticpy-docker-test/: Dockerfile
msticpy/aiagents/: __init__.py  assistant_agent.py  config_utils.py  mp_docs_rag_magic.py  rag.py  rag_agent.py  rag_agents.py  rag_magic.py
msticpy/analysis/: __init__.py  cluster_auditd.py  code_cleanup.py  domain_utils.py  eventcluster.py  geoip.py  ip_utils.py  observationlist.py  outliers.py  polling_detection.py  sectools_magics.py  syslog_utils.py  timeseries.py
msticpy/auth/: __init__.py  azure_auth.py  azure_auth_core.py  cloud_mappings.py  cloud_mappings_offline.py  cred_wrapper.py  keyring_client.py  keyvault_client.py  keyvault_settings.py  msal_auth.py  secret_settings.py
msticpy/common/: __init__.py  archive_utils.py  azure_auth.py  azure_auth_core.py  check_version.py  cloud_mappings.py  cred_wrapper.py  data_types.py  data_utils.py  exceptions.py  keyring_client.py  keyvault_client.py  keyvault_pre_auth.py  keyvault_settings.py  msal_auth.py  pkg_config.py  provider_settings.py  proxy_settings.py  secret_settings.py  settings.py  timespan.py  utility.py  wsconfig.py
pre-commit/: download_tlds.py
prof/: Untitled.ipynb
tests/: conftest.py  fixtures.py  ignored_uri_links.txt  msticpyconfig-test.yaml  test_abs.py  test_anom_seq.py  test_anom_seq_cmds_only.py  test_anom_seq_cmds_params_only.py  test_anom_seq_cmds_params_values.py  test_anom_seq_data_structures.py  test_anom_seq_laplace_smooth.py  test_anom_seq_model.py  test_anom_seq_probabilities.py  test_anom_sessionize.py  test_anomalous.py  test_auditdextract.py  test_azure_sentinel.py  test_azuredata.py  test_b64unpack.py  test_cmd_line.py  test_cmds_only.py  test_cmds_params_only.py  test_data_localdata.py  test_data_structures.py  test_dataqueries.py  test_doc_links.py  test_domain_utils.py  test_drivers.py  test_event_cluster.py  test_folium.py  test_geoip.py  test_ioc_extractor.py  test_ip_utils.py  test_kql_magic.py  test_linuxsyslog.py  test_model.py  test_morph_charts.py  test_msticpy.py  test_nb_tools.py  test_nbdisplay.py  (+21 more)
tools/: Module-Analysis.ipynb  NotebookMetadata.ipynb  QueryProviderDocumenter.ipynb  add_future_annotations.py  analyze_imports.py  ast_parser.py  build_wheel_from_targz.py  check_latest_ver.py  comp-reqs.py  comp_reqs.py  config2kv.py  create_reqs_all.py  download_python_package.py  import_analyzer.py  install_all_whl_files.py  module_tree.py  mp_demo_data.py  mp_test_extras.py  print_call_tree.py  run_all_notebooks.py  test-pypi-test-pkg.cmd  test_mp_extras.py  test_mp_release.cmd  test_mp_release.sh
(+1539 files in other folders)
