[metadata]
name = msticpy
version = attr: msticpy._version.VERSION
description = MSTIC Security Tools
long_description = file: README.md
long_description_content_type = text/markdown
author = Ian Hellen
author_email = ianhelle@microsoft.com
maintainer = Pete Bryan
maintainer_email = peter.bryan@microsoft.com
keywords =
    security
    azure
    sentinel
    mstic
    cybersec
    infosec
    cyber
    cybersecurity
    jupyter
    notebooks
    SOC
    hunting
license = MIT License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Framework :: IPython
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

url = https://github.com/microsoft/msticpy
project_urls =
    Documentation = https://msticpy.readthedocs.io
    Code = https://github.com/microsoft/msticpy
    Issue tracker = https://github.com/microsoft/msticpy/issues

[options]
zip_safe = False
include_package_data = True
package_dir =
    msticpy = msticpy
packages = find:
python_requires = >=3.6

[options.packages.find]
include = msticpy*
exclude = tests. tests*. *.tests.*
